[package]
name = "json_or_protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["protobuf"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
prost = "0.12.4"